// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form ranking Component Ranking elements  Should select and unselect an element 1`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Ranking elements  Should select and unselect an element 2`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Ranking elements  Should unselect and select an element 1`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Ranking elements  Should unselect and select an element 2`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Rendering Should render with values with ranking 1`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Rendering Should render with values with ranking and order 1`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          1
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      <div
        class="rank-indicator"
        data-yoo-form-ranking=""
      >
        <span
          data-yoo-form-ranking=""
        >
          2
        </span>
      </div>
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;

exports[`Form ranking Component Rendering Should render with values without ranking 1`] = `
<yoo-form-ranking
  class="hydrated"
  data-yoo-form-ranking-host=""
>
  
  <div
    attr-layout="column"
    class="ranking-container"
    data-yoo-form-ranking=""
  >
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        a
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        b
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        c
      </span>
    </div>
    <div
      attr-layout="row"
      class="item-container"
      data-yoo-form-ranking=""
    >
      
      <span
        data-yoo-form-ranking=""
      >
        d
      </span>
    </div>
  </div>
</yoo-form-ranking>
`;
